--- a/app/views/consultas.html
+++ b/app/views/consultas.html
@@ -5,14 +5,14 @@
          <fieldset>
             <div class="row">
                <div class="col-md-6 form-group">
-                  <label for="nombre-y-apellido">Nombre y Apellido (*)</label>
+                  <label for="nombre-y-apellido">Nombre y Apellido *</label>
                   <div class="input-group input-group-lg">
                      <span class="input-group-addon">N</span>
                      <input type="text" class="form-control" id="nombre-y-apellido" placeholder="Ej.: Juan Pérez">
                   </div>
                </div>
                <div class="col-md-6 form-group">
-                  <label for="email">Email (*)</label>
+                  <label for="email">Email *</label>
                   <div class="input-group input-group-lg">
                      <span class="input-group-addon">@</span>
                      <input type="email" class="form-control" id="email" placeholder="Ej.: ejemplo@ejemplo.com">
@@ -38,7 +38,7 @@
             <hr class="border-bottom-gray" />
             <div class="row">
                <div class="col-md-6 form-group">
-                  <label for="sector">Sector (*)</label>
+                  <label for="sector">Sector *</label>
                   <div class="input-group input-group-lg">
                      <span class="input-group-addon">o</span>
                      <select class="form-control">
@@ -82,7 +82,7 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="form-group">
-                     <label for="norma-a-consultar">Norma a consultar (*)</label>
+                     <label for="norma-a-consultar">Norma a consultar *</label>
                      <div class="input-group input-group-lg">
                         <span class="input-group-addon">?</span>
                         <input type="text" class="form-control" id="norma-a-consultar" placeholder="Ej.: ACU-0191">
@@ -95,7 +95,7 @@
                </div>
                <div class="col-md-6">
                   <div class="form-group">
-                     <label for="norma-a-consultar">Mensaje (*)</label>
+                     <label for="norma-a-consultar">Mensaje *</label>
                      <textarea class="form-control" rows="5" placeholder="Escriba aquí su mensaje"></textarea>
                   </div>
                </div>
@@ -111,7 +111,7 @@
 
             <div class="row">
                <div class="col-md-12">
-                  <input class="btn btn-primary pull-right cbp-mc-submit" type="submit" value="Enviar" {{action submit target="view"}}data-loading-text="Enviando..." />
+                  <input class="btn btn-success btn-lg pull-right col-md-4" type="submit" value="Enviar consulta" {{action submit target="view"}}data-loading-text="Enviando..." />
                </div>
             </div>
 
