test xslt en browser

--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -1,3 +1,10 @@
+
+
+<div id="example">{{resultado}}</div>
+
+<button ng-click="displayResult()">Mostrar Resultado ! </button>
+
+<!--
 <section id="page">
     <div class="container">
        
@@ -106,9 +113,9 @@
                             });                
 
                             if (items.length > 0) {
-                                //$('#accordion').removeHighlight();
+                            
                                 $("#resultados").html('<div class="row hidden-xs" id=""><div class="col-md-2 col-sm-2"><b>N &deg; Norma</b></div><div class="col-md-2 col-sm-2"><b>Código</b></div><div class="col-md-8 col-sm-8"><b>Título</b></div></div>' + items.join( "" ));
-                                //$('#accordion > li').highlight($('input[name=search]').val());
+                        
                                 $("#accordion").html("");
                                 $("#normas").html("");
                             } else {
@@ -153,17 +160,10 @@
                 })
             );
         </script>
-        <!--<div id="sidebar" class="col-md-4 pull-right" role="complementary">
-           <div class="sidebar-inner">
-              <aside class="widget-area">
-                 <div>
-                    <h3>Indice</h3>
-                    <div class="menu-herramientas-container" id="sidebar">
-                    </div>
-                 </div>
-              </aside>
-           </div>
-        </div>-->
+
 </div>
 
-</section><!--/#page-->
+</section>
+
+
+-->
