--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -1,5 +1,25 @@
 
 
+<section class="content">
+    <div class="row ">
+        <div class="search-field-container"></div>
+    </div>
+    <div class="row">
+        <span class="result-container"></span>
+        <span class-"filters-container">
+            <div class="filter-heading-container"></div>
+            <div class="filter-tag-container"></div>
+            <div class="filter-options-container">
+                
+            </div>
+
+        </span>
+    </div>
+    
+</section>
+
+
+
 <div id="example">{{resultado}}</div>
 
 <button ng-click="displayResult()">Mostrar Resultado ! </button>
