changes consultas / normativa

--- a/app/views/consultas.html
+++ b/app/views/consultas.html
@@ -1,5 +1,9 @@
-<div class="container">
-   <h1 class="title-heading">Formulario de consultas</h1>
+<div class="container-fluid heading">
+    <div class="container">
+        <h1 class="title-heading">Formulario de consultas</h1>
+    </div>
+</div><!--/.heading-->
+<section id="consultas" class="container">
    <div class="col-md-10 col-md-offset-1">
       <form role="form" id="consultas-form" class="col-md-12 form-base form-lg">
          <fieldset>
@@ -136,4 +140,4 @@
          </fieldset>
       </form>
    </div>
-</div>
+</section>
