--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -1,28 +1,18 @@
-
-
-<section class="content">
-    <div class="row ">
-        <div class="search-field-container"></div>
+<div class="container-fluid heading">
+    <div class="container">
+        <h1 class="title-heading">Resultados de Búsqueda</h1>
     </div>
+</div><!--/.heading-->
+<section id="normativa" class="container">
     <div class="row">
-        <span class="result-container"></span>
-        <span class-"filters-container">
-            <div class="filter-heading-container"></div>
-            <div class="filter-tag-container"></div>
-            <div class="filter-options-container">
-                
-            </div>
-
-        </span>
+        <div class="col-md-10 col-md-offset-1">
+            <form role="form" id="consultas-form" class="col-md-12 form-base form-lg">
+                <input />
+                <input class="btn btn-warning btn-lg pull-right col-md-2" type="submit" value="Buscar" />
+            </form>
+        </div>
     </div>
-    
-</section>
-
-
-
-<div id="example">{{resultado}}</div>
-
-<button ng-click="displayResult()">Mostrar Resultado ! </button>
+</section><!--/#normativa-->
 
 <!--
 <section id="page">
