--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -177,6 +177,18 @@ p
 		}
 	}
 }
+.heading
+{
+	background-color: $color-light-blue;
+	color: white !important;
+	margin: 0 0 30px 0;
+	padding: 35px 0;
+
+	h1
+	{
+		margin: 0;
+	}
+}
 .navbar
 {
 	border: 0;
@@ -292,7 +304,8 @@ p
 }
 .title-heading
 {
-
+	font-size: $font-size-xxlarge !important;
+	font-weight: 300;
 }
 .title-primary
 {
