--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -1,4 +1,4 @@
-<div id="landing">
+<section id="landing">
     <section id="jumbo-landing"  class="jumbotron">
         <div class="container">
             <div class="col-md-10 col-md-offset-1">
@@ -134,4 +134,4 @@
             </div>
         </div>
     </section><!--/#landing-content-->
-</div><!--/#landing-->
+</section><!--/#landing-->
