estructura HTML normativa

--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -5,14 +5,32 @@
 </div><!--/.heading-->
 <section id="normativa" class="container">
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-            <form role="form" id="consultas-form" class="col-md-12 form-base form-lg">
-                <input />
+        <form role="form" id="normativa-search" class="col-md-9 form-base form-lg">
+            <div class="form-group">
+                <div class="col-md-10">
+                    <div class="input-group input-group-lg">
+                        <span class="input-group-addon">@</span>
+                        <input type="text" class="form-control" id="normativa-input-search" placeholder="Escriba aquí su búsqueda" />
+                    </div>
+                </div>
                 <input class="btn btn-warning btn-lg pull-right col-md-2" type="submit" value="Buscar" />
-            </form>
+            </div>
+        </form>
+    </div>
+    <div id="normativa-main" class="row">
+        <div class="col-md-9">
+            <!--listado de busqueda-->
+        </div>
+        <div class="col-md-3">
+            <!--filtros-->
         </div>
     </div>
 </section><!--/#normativa-->
+
+
+
+
+
 
 <!--
 <section id="page">
