--- a/app/views/consultas.html
+++ b/app/views/consultas.html
@@ -12,14 +12,14 @@
                   <label for="nombre-y-apellido">Nombre y Apellido *</label>
                   <div class="input-group input-group-lg">
                      <span class="input-group-addon">N</span>
-                     <input type="text" class="form-control" id="nombre-y-apellido" placeholder="Ej.: Juan Pérez">
+                     <input type="text" class="form-control" id="nombre-y-apellido" placeholder="Ej.: Juan Pérez" />
                   </div>
                </div>
                <div class="col-md-6 form-group">
                   <label for="email">Email *</label>
                   <div class="input-group input-group-lg">
                      <span class="input-group-addon">@</span>
-                     <input type="email" class="form-control" id="email" placeholder="Ej.: ejemplo@ejemplo.com">
+                     <input type="email" class="form-control" id="email" placeholder="Ej.: ejemplo@ejemplo.com" />
                   </div>
                </div>
             </div><!--/.row-->
@@ -28,14 +28,14 @@
                   <label for="telefono">Teléfono de contacto</label>
                   <div class="input-group input-group-lg">
                      <span class="input-group-addon">#</span>
-                     <input type="text" class="form-control" id="telefono" placeholder="Ej.: 1141235678">
+                     <input type="text" class="form-control" id="telefono" placeholder="Ej.: 1141235678" />
                   </div>
                </div>
                <div class="col-md-6 form-group">
                   <label for="email">DNI</label>
                   <div class="input-group input-group-lg">
                      <span class="input-group-addon">1</span>
-                     <input type="text" class="form-control" id="email" placeholder="Ej.: 12345678">
+                     <input type="text" class="form-control" id="email" placeholder="Ej.: 12345678" />
                   </div>
                </div>
             </div><!--/.row-->
@@ -89,7 +89,7 @@
                      <label for="norma-a-consultar">Norma a consultar *</label>
                      <div class="input-group input-group-lg">
                         <span class="input-group-addon">?</span>
-                        <input type="text" class="form-control" id="norma-a-consultar" placeholder="Ej.: ACU-0191">
+                        <input type="text" class="form-control" id="norma-a-consultar" placeholder="Ej.: ACU-0191"/>
                      </div>
                   </div>
                   <div class="form-group">
