--- a/app/views/consultas.html
+++ b/app/views/consultas.html
@@ -9,14 +9,14 @@
          <fieldset>
             <div class="row">
                <div class="col-md-6 form-group">
-                  <label for="nombre-y-apellido">Nombre y Apellido *</label>
+                  <label for="nombre-y-apellido" class="title-third">Nombre y Apellido *</label>
                   <div class="input-group input-group-lg">
                      <span class="input-group-addon">N</span>
                      <input type="text" class="form-control" id="nombre-y-apellido" placeholder="Ej.: Juan Pérez" />
                   </div>
                </div>
                <div class="col-md-6 form-group">
-                  <label for="email">Email *</label>
+                  <label for="email" class="title-third">Email *</label>
                   <div class="input-group input-group-lg">
                      <span class="input-group-addon">@</span>
                      <input type="email" class="form-control" id="email" placeholder="Ej.: ejemplo@ejemplo.com" />
@@ -25,14 +25,14 @@
             </div><!--/.row-->
             <div class="row">
                <div class="col-md-6 form-group">
-                  <label for="telefono">Teléfono de contacto</label>
+                  <label for="telefono" class="title-third">Teléfono de contacto</label>
                   <div class="input-group input-group-lg">
                      <span class="input-group-addon">#</span>
                      <input type="text" class="form-control" id="telefono" placeholder="Ej.: 1141235678" />
                   </div>
                </div>
                <div class="col-md-6 form-group">
-                  <label for="email">DNI</label>
+                  <label for="email" class="title-third">DNI</label>
                   <div class="input-group input-group-lg">
                      <span class="input-group-addon">1</span>
                      <input type="text" class="form-control" id="email" placeholder="Ej.: 12345678" />
@@ -42,7 +42,7 @@
             <hr class="border-bottom-gray" />
             <div class="row">
                <div class="col-md-6 form-group">
-                  <label for="sector">Sector *</label>
+                  <label for="sector" class="title-third">Sector *</label>
                   <div class="input-group input-group-lg">
                      <span class="input-group-addon">o</span>
                      <select class="form-control">
@@ -86,20 +86,20 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="form-group">
-                     <label for="norma-a-consultar">Norma a consultar *</label>
+                     <label for="norma-a-consultar" class="title-third">Norma a consultar *</label>
                      <div class="input-group input-group-lg">
                         <span class="input-group-addon">?</span>
                         <input type="text" class="form-control" id="norma-a-consultar" placeholder="Ej.: ACU-0191"/>
                      </div>
                   </div>
                   <div class="form-group">
-                     <label for="adjuntar-archivo">Adjuntar archivo</label>
+                     <label for="adjuntar-archivo" class="title-third">Adjuntar archivo</label>
                      <input type="file" id="adjuntar-archivo" class="btn btn-warning" placeholder="Adjuntar archivo" />
                   </div>
                </div>
                <div class="col-md-6">
                   <div class="form-group">
-                     <label for="norma-a-consultar">Mensaje *</label>
+                     <label for="norma-a-consultar" class="title-third">Mensaje *</label>
                      <textarea class="form-control" rows="5" placeholder="Escriba aquí su mensaje"></textarea>
                   </div>
                </div>
