--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -7,11 +7,11 @@
                         <fieldset>
                             <legend>Buscar normas</legend>
                             <div class="form-group">
-                                <label for="norma-nro-codigo">N° / Código de Norma</label>
+                                <label for="norma-nro-codigo" class="title-fourth">N° / Código de Norma</label>
                                 <input type="text" class="form-control" id="norma-nro-codigo" placeholder="Ingresar número de norma">
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputPassword1">Categoría</label>
+                                <label for="exampleInputPassword1" class="title-fourth">Categoría</label>
                                 <select class="form-control">
                                     <option value="0">Todas</option>
                                     <option value="1">ADM – Administrativo</option>
@@ -48,7 +48,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputFile">Fecha de sanción</label>
+                                <label for="exampleInputFile" class="title-fourth">Fecha de sanción</label>
                                 <div class="row">
                                     <div class="col-md-6">
                                         <select class="form-control">
