minor changes css

--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -23,11 +23,11 @@
             <fieldset>
                 <legend class="title-secondary">Filtrar resultados</legend>
                 <div class="form-group">
-                    <h4 class="">Estado</h4>
-                    <label>
+                    <h4 class="title-third">Estado</h4>
+                    <label class="title-fourth">
                         <input type="checkbox"> Consolidadas en DJA
                     </label>
-                    <label>
+                    <label class="title-fourth">
                         <input type="checkbox"> En proceso de consolidación
                     </label>
                 </div>
