cambios en normativa y css

--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -5,7 +5,7 @@
                 <div class="col-md-4">
                     <form role="form" id="landing-form-search" class="col-md-12 form-base">
                         <fieldset>
-                            <legend>Buscar normas</legend>
+                            <legend class="font-bold title-third">Buscar normas</legend>
                             <div class="form-group">
                                 <label for="norma-nro-codigo" class="title-fourth">N° / Código de Norma</label>
                                 <input type="text" class="form-control" id="norma-nro-codigo" placeholder="Ingresar número de norma">
