--- a/app/styles/_normativa.scss
+++ b/app/styles/_normativa.scss
@@ -8,3 +8,28 @@
 
 
 /* clases */
+
+.table-list
+{
+	li
+	{
+		display: inline-block;
+		padding: 10px 0;
+	}
+
+	#list-header
+	{
+		background-color: $color-soft-gray;
+		padding: 20px 0;
+
+		ul
+		{
+			margin: 0;
+
+			li
+			{
+				padding: 0 10px;
+			}
+		}
+	}
+}
