--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -8,8 +8,7 @@
         <form role="form" id="normativa-search" class="col-md-9 form-base form-lg">
             <div class="form-group row">
                 <div class="col-md-10">
-                    <div class="input-group input-group-lg">
-                        <span class="input-group-addon">@</span>
+                    <div class="col-md-12 input-group input-group-lg">
                         <input type="text" class="form-control" id="normativa-input-search" placeholder="Escriba aquí su búsqueda" />
                     </div>
                 </div>
@@ -18,7 +17,7 @@
         </form>
     </div>
     <div class="row">
-        <div class="col-md-3 pull-right">
+        <aside id="normativa-filters" class="col-md-3 pull-right">
             <form role="form" id="normativa-filters" class="form-base">
             <fieldset>
                 <legend class="title-secondary">Filtrar resultados</legend>
@@ -74,7 +73,7 @@
                 </div>
             </fieldset>
             </form>
-        </div>
+        </aside>
         <div class="col-md-9 pull-left">
             <section id="normativa-main">
                 <div class="nav-path-header">
@@ -109,7 +108,7 @@
                                 </div>
                                 <div class="col-md-5 pull-left">
                                     <div class="row">
-                                        <li id="list-item-fecha" class="col-md-4">10.03.1947</li>
+                                        <li id="list-item-fecha" class="col-md-4">10/03/1947</li>
                                         <li id="list-item-nro-norma" class="col-md-4">13.645</li>
                                         <li id="list-item-codigo"class="col-md-4">ASA-963</li>
                                     </div>
@@ -126,7 +125,7 @@
                                 </div>
                                 <div class="col-md-5 pull-left">
                                     <div class="row">
-                                        <li id="list-item-fecha" class="col-md-4">10.03.1947</li>
+                                        <li id="list-item-fecha" class="col-md-4">10/03/1947</li>
                                         <li id="list-item-nro-norma" class="col-md-4">13.645</li>
                                         <li id="list-item-codigo"class="col-md-4">ASA-963</li>
                                     </div>
@@ -143,7 +142,7 @@
                                 </div>
                                 <div class="col-md-5 pull-left">
                                     <div class="row">
-                                        <li id="list-item-fecha" class="col-md-4">10.03.1947</li>
+                                        <li id="list-item-fecha" class="col-md-4">10/03/1947</li>
                                         <li id="list-item-nro-norma" class="col-md-4">13.645</li>
                                         <li id="list-item-codigo"class="col-md-4">ASA-963</li>
                                     </div>
@@ -160,7 +159,7 @@
                                 </div>
                                 <div class="col-md-5 pull-left">
                                     <div class="row">
-                                        <li id="list-item-fecha" class="col-md-4">10.03.1947</li>
+                                        <li id="list-item-fecha" class="col-md-4">10/03/1947</li>
                                         <li id="list-item-nro-norma" class="col-md-4">13.645</li>
                                         <li id="list-item-codigo"class="col-md-4">ASA-963</li>
                                     </div>
@@ -177,7 +176,7 @@
                                 </div>
                                 <div class="col-md-5 pull-left">
                                     <div class="row">
-                                        <li id="list-item-fecha" class="col-md-4">10.03.1947</li>
+                                        <li id="list-item-fecha" class="col-md-4">10/03/1947</li>
                                         <li id="list-item-nro-norma" class="col-md-4">13.645</li>
                                         <li id="list-item-codigo"class="col-md-4">ASA-963</li>
                                     </div>
@@ -194,7 +193,7 @@
                                 </div>
                                 <div class="col-md-5 pull-left">
                                     <div class="row">
-                                        <li id="list-item-fecha" class="col-md-4">10.03.1947</li>
+                                        <li id="list-item-fecha" class="col-md-4">10/03/1947</li>
                                         <li id="list-item-nro-norma" class="col-md-4">13.645</li>
                                         <li id="list-item-codigo"class="col-md-4">ASA-963</li>
                                     </div>
@@ -211,7 +210,7 @@
                                 </div>
                                 <div class="col-md-5 pull-left">
                                     <div class="row">
-                                        <li id="list-item-fecha" class="col-md-4">10.03.1947</li>
+                                        <li id="list-item-fecha" class="col-md-4">10/03/1947</li>
                                         <li id="list-item-nro-norma" class="col-md-4">13.645</li>
                                         <li id="list-item-codigo"class="col-md-4">ASA-963</li>
                                     </div>
@@ -221,7 +220,7 @@
                     </ul>
                 </section>
                 <div class="nav-path-footer">
-                    <ul class="pagination">
+                    <ul class="pagination pull-right">
                         <li><a href="#">&laquo;</a></li>
                         <li><a href="#">1</a></li>
                         <li><a href="#">2</a></li>
