--- a/app/styles/_normativa.scss
+++ b/app/styles/_normativa.scss
@@ -6,6 +6,60 @@
 
 /* id */
 
+#normativa-filters
+{
+	margin: 8px 0 0 0;
+
+	form
+	{
+		fieldset
+		{
+
+			legend
+			{
+				border-bottom: 1px solid $color-gray;
+				padding: 0 0 5px 0;
+				margin: 0 0 30px 0;
+			}
+		}
+	}
+}
+#normativa-search
+{
+	#normativa-input-search
+	{
+		border-top: 0;
+		border-right: 0;
+		border-bottom: 2px solid $color-light-gray;
+		border-left: 0;
+		border-radius: 0;
+		box-shadow: none;
+		color: $color-main-gray;
+		font-size: $font-size-large;
+		font-weight: 300;
+		line-height: 1;
+	}
+	::-webkit-input-placeholder
+	{
+		font-size: $font-size-large !important;
+		font-weight: 300;
+	}
+	:-moz-placeholder
+	{
+		font-size: $font-size-large !important;
+		font-weight: 300;
+	}
+	::-moz-placeholder
+	{
+		font-size: $font-size-large !important;
+		font-weight: 300;
+	}
+	:-ms-input-placeholder
+	{
+		font-size: $font-size-large !important;
+		font-weight: 300;
+	}
+}
 
 /* clases */
 
